<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- game types -->
    <string name="campaign">Campaign</string>
    <string name="single_game">Single game</string>
    <string name="multiplayer_game">Multiplayer game</string>

    <!-- pre game customizations -->
    <string name="choose_alliance">Alliance</string>

    <string-array name="alliances">
        <item>Imperials</item>
        <item>Rebels</item>
        <item>Mutants</item>
    </string-array>

    <string name="planet1">Planet 1</string>
    <string name="planet2">Planet 2</string>
    <!-- /pre game customizations -->

    <!-- unions -->
    <!-- imperials -->
    <!-- buildings -->
    <string name="camp">Camp</string>
    <string name="tent">Tent</string>
    <string name="barracks">Barracks</string>
    <string name="shooters_hall">ShootersHall</string>
    <string name="training_center">TrainingCenter</string>
    <string name="workshop">Workshop</string>
    <string name="laboratory">Laboratory</string>
    <string name="bunker">Bunker</string>
    <string name="defender">Defender</string>
    <string name="municipality">Municipality</string>
    <string name="earth_artifact">Earth Artifact</string>
    <!-- /buildings -->
    <!-- units -->
    <string name="conscript">Conscript</string>
    <string name="grant">Grant</string>
    <string name="sergeant">Sergeant</string>
    <string name="boy_scout">Boy Scout</string>
    <string name="scout">Scout</string>
    <string name="infantrymen">Infantrymen</string>
    <string name="SF">SF</string>
    <string name="sniper">Sniper</string>
    <string name="killer">Killer</string>
    <string name="agent">Agent</string>
    <string name="spy">Spy</string>
    <string name="robot">Robot</string>
    <string name="metal_killer">Metal Killer</string>
    <string name="demolisher">Demolisher</string>
    <string name="superman">Superman</string>
    <!-- /units -->

    <!-- rebels -->
    <!-- buildings -->
    <string name="underground">Underground</string>
    <string name="factory">Factory</string>
    <string name="bomos">Bomos</string>
    <string name="hospital">Hospital</string>
    <string name="minery">Minery</string>
    <string name="artillery">Artillery</string>
    <string name="sabotage_center">Sabotage Center</string>
    <string name="fort">fort</string>
    <string name="caches">Caches</string>
    <string name="space_material">Space Material</string>
    <!-- /buildings -->
    <!-- units -->
    <string name="machine_gunner">Machine Gunner</string>
    <string name="mechanical_soldier">Mechanical Soldier</string>
    <string name="oplot_u">Oplot U</string>
    <string name="oplot_m">Oplot M</string>
    <string name="suicide">Suicide</string>
    <string name="priest">Priest</string>
    <string name="doctor">Doctor</string>
    <string name="shaman">Shaman</string>
    <string name="engineer">Engineer</string>
    <string name="exploder">Exploder</string>
    <string name="ballista">Ballista</string>
    <string name="thor">Thor</string>
    <string name="recruiter">Recruiter</string>
    <string name="saboteur">Saboteur</string>
    <!-- /units -->

    <!-- mutants -->
    <!-- buildings -->
    <string name="water_cave">Water Cave</string>
    <string name="invisible_plain">Invisible Plain</string>
    <string name="hydra_pond">Hydra Pond</string>
    <string name="poison_cave">Poison Cave</string>
    <string name="web">Web</string>
    <string name="mountain_cave">Mountain Cave</string>
    <string name="hell">Hell</string>
    <string name="bastion">Bastion</string>
    <string name="reptile_city">Reptile City</string>
    <string name="king_of_snakes">King of Snakes</string>
    <!-- /buildings -->
    <!-- units -->
    <string name="lizard">Lizard</string>
    <string name="tortoise">Tortoise</string>
    <string name="dragon">Dragon</string>
    <string name="scorpion">Scorpion</string>
    <string name="king_scorpion">Scorpion King</string>
    <string name="young_hydra">Young Hydra</string>
    <string name="hydra">Hydra</string>
    <string name="eel">Eel</string>
    <string name="cobra">Cobra</string>
    <string name="spider1">Spider 1</string>
    <string name="spider2">Spider 2</string>
    <string name="bat">Bat</string>
    <string name="vampire">Vampire</string>
    <string name="agat">Agat</string>
    <string name="kak">Kak</string>
    <!-- units -->
    <!-- /mutants -->
    <!-- /unions -->

    <!-- settings -->
    <string name="settings">Settings</string>

    <!-- general -->
    <string name="app_name">SpaceInvaders</string>
    <string name="exit">Exit</string>
    <string name="back">Back</string>
    <string name="connect">Connect</string>
    <string name="orbital_station">Orbital station</string>
    <string name="unmovable">Unmovable</string>

    <!-- network game -->
    <string name="create_game">Create game</string>
    <string name="direct_ip">Write direct ip</string>
    <string name="games_list">Games list</string>
    <string name="ip_address">Ip address : </string>

    <!-- creating server -->
    <string name="your_ip_address">Your ip address : </string>
    <string name="template_ip">125.125.125.125</string>
    <string name="no_opponents">No clients connected to your server…</string>
    <string name="your_opponent_name">Your opponent name : </string>
    <string name="your_opponent_ip">Your opponent ip : </string>
    <string name="start_game">Start game</string>
    <string name="ip_address_separator">.</string>
    <string name="connected_client_with_ip">Connected client with ip : </string>

    <!-- client connected to server -->
    <string name="you_are_connected_to_server">You are connected to server with ip : </string>

    <!-- description popup -->

    <!-- buildings -->
    <string name="description_build_button">Build</string>
    <string name="description_back_button">Back</string>
    <string name="description_upgrade_button">Upgrade</string>
    <string name="description_path_button">Set path</string>
    <string name="description_cost">Cost :</string>
    <string name="description_produce">Produce :</string>
    <string name="description_description">Description :</string>
    <string name="description_unit_producing_time">Unit producing time :</string>
    <string name="description_upgrade">Upgrade cost :</string>

    <!-- units -->
    <string name="description_building">Building :</string>
    <string name="description_speed">Speed :</string>
    <string name="description_health">Health :</string>
    <string name="description_reload_time">Reload time :</string>
    <string name="description_unique">Unique :</string>
    <string name="description_attack">A</string>
    <string name="description_defence">D</string>
    <!-- /description popup -->

    <!-- descriptions -->
    <string name="earth_artifact_description">By 10\u0025 increase each unit health</string>
    <string name="space_material_description">Give 10\u0025 chance for player each unit \nto avoid an attack</string>
    <string name="king_of_snakes_description">By 10\u0025 increase an attack for the \n player each unit</string>
    <string name="municipality_description">First created building increase by 20\u0025\n to the income.\nEach next adds \n1\u0025 t existing value.</string>
    <string name="caches_description">First created building increase by 20\u0025\n to the income.\nEach next adds \n1\u0025 t existing value.</string>
    <string name="reptile_city_description">First created building increase by 20\u0025\n to the income.\nEach next adds \n1\u0025 t existing value.</string>
    <!-- /descriptions -->

    <!-- campaign -->
    <!-- guide campaign -->
    <string name="campaign_guide_start">Start</string>
    <string name="campaign_guide_enter">Enter</string>
    <!-- /guide campaign -->
    <!-- /campaign -->

    <!-- mission -->
    <!-- results -->
    <string name="win">You win!</string>
    <string name="lose">You lose!</string>
    <!-- /results -->
    <!-- /mission -->
</resources>
